--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -1,11 +1,3 @@
-
-button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
-  -webkit-appearance: button;
-}
-
 body {
     background: #eee;
     text-align: center;
@@ -13,60 +5,14 @@ body {
     font-family: arial, sans-serif;
 }
 
-#main, #roombar {
-    width: 800px;
+#main, #chats {
+    width: 500px;
     margin: auto;
     text-align: left;
     background: white;
     padding: 50px 60px;
     border: solid #ddd;
     border-width: 0 1px 1px 1px;
-}
-
-
-#columns {
-    width: 920px;
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-}
-.message{
-    width: 300px;
-    min-height: 100px;
-    border-radius: 10px;
-    border: 3px solid black;
-    margin: 5px auto;
-    background-color: lightgrey;
-}
-.username{
-    display:inline-block;
-    float:left;
-    margin: 5px 5px 5px 20px;
-}
-
-.roomname{
-    display:inline-block;
-    float: right;
-    margin: 5px 20px 5px 5px;
-}
-
-.text{
-    display: inline-block;
-    width: 260px;
-    margin: 5px 20px 15px 20px;
-    text-align: left;
-    word-wrap: break-word;
-    
-}
-.profile {
-    grid-column: 1; 
-    background-color: lightblue;
-    padding: 0;
-    margin: 0;
-}
-#chats {
-    grid-column: 2; 
-    background-color: grey
 }
 
 #main h1 {
@@ -108,6 +54,7 @@ form {
 
 form input[type=text] {
     margin-right: 10px;
+    width: 70%;
     font-size: 12px;
     padding: 5px;
 }
@@ -136,64 +83,8 @@ form input[type=text] {
     padding: 10px;
 }
 
-/*
-New Post
-*/
-
-#roombar {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    padding: 20px 60px;
-}
-
-.newPost {
-    grid-column: 2;
-    
-}
-
-#newText {
-    display: inline-block;
-    width: 300px;
-    height: 100px;
-    resize: none;
-    position: relative;
-    /*left: 50px;*/
-}
-
-fieldset .submit {
-    height: 40px;
-    width: 75px;
-    background-color: #117182de;
-    border-radius: 15px;
-    color: white;
-    font-weight: bold;
-    font-size: 16px;
-    position: relative;
-    top: -12px;
-    box-shadow: 3px 2px 2px 1px #00000042;
-}
-
 .friend {
-    font-weight: bold
+    color: #fff;
+    background-color: #0090da;
 }
 
-.rooms button {
-    height: 20px;
-    display: block;
-}
-
-.rooms {
-    overflow-y: scroll;
-    height: 150px;
-}
-
-fieldset .roomTextBox{
-    width: 178px;
-    height: 10px;
-}
-
-fieldset .text-area {
-    width: 400px;
-    height: 100px;
-    resize: none;
-}
